garde/tests/ui/compile-fail/pattern_mismatched_types.stderr
error[E0308]: mismatched types
 --> tests/ui/compile-fail/pattern_mismatched_types.rs:5:21
  |
5 |     #[garde(pattern(STR))]
  |                     ^^^ expected `&Regex`, found `&&str`
  |
  = note: expected reference `&Regex`
             found reference `&&'static str`
